--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,28 @@ dependencies = [
     "numpy>=2.4.0",
     "torch>=2.9.1",
 ]
+license = {text = "MIT"}
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: C++",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+]
+
+[project.urls]
+Homepage = "github.com/zeroby0/cuPosit"
+Repository = "github.com/zeroby0/cuPosit"
+
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel", "torch"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["cuposit"]
+include-package-data = true
+
+[tool.setuptools.package-data]
+cuposit = ["*.so", "*.pyd"]
