--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ dependencies = [
     "icecream>=2.1.8",
     "ninja>=1.13.0",
     "numpy>=2.4.0",
-    "torch>=2.9.1",
-    "torchvision>=0.24.1",
+    "torch>=2.10.0",
+    "torchvision>=0.25.0",
 ]
 license = "AGPL-3.0-or-later"
 classifiers = [
@@ -35,3 +35,6 @@ include-package-data = true
 
 [tool.setuptools.package-data]
 cuposit = ["*.so", "*.pyd"]
+
+[tool.uv]
+package = true
