Updated README.md and fixed uv sync

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,3 +38,16 @@ cuposit = ["*.so", "*.pyd"]
 
 [tool.uv]
 package = true
+
+[tool.uv.workspace]
+members = [
+    ".",
+]
+
+[tool.uv.sources]
+cuposit = { workspace = true}
+
+[dependency-groups]
+dev = [
+    "cuposit",
+]
